2009-04-05	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-mixer-plugin.c: Display mute/record state properly
	  on startup (bug #5002). Fix segfault when destroying the plugin
	  (thanks to Cody Somerville for hunting this one down) (bug #4948).
	* xfce4-mixer/xfce-mixer-track.c: Move capture track check into
	  xfce_mixer_track_update_record().
	* xfce4-mixer/xfce-mixer.c: Don't increment the reference count on
	  GObjects when passing them to GValue using g_value_set_object().

2009-02-13	Jannis Pohlmann <jannis@xfce.org>

	* xfce4-mixer/xfce4-mixer.desktop.in.in: Add missing AudioVideo
	  category which is obligatory if you use the Audio category (bug
	  #4933).

2009-02-10	Jannis Pohlmann <jannis@xfce.org>

	* TODO: Remove a few things from the TODO list.
	* configure.in.in: Add the svn version tag back again.
	* xfce4-mixer/xfce-mixer.c, xfce4-mixer/xfce-mixer-track.c: Minor
	  cosmetic fixes (row spacing of 6px in tables).
	* xfce4-mixer/xfce-mixer-window.c: Make <Control>q and <Control>s
	  trigger the corresponding actions.

2009-02-03	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-mixer-plugin.c: Use the GstMixerTrack "label"
	  property instead of the struct member to access the name of a track.
	  Toggle record for capture tracks instead of trying to mute them.
	  Capture tracks don't support muting (bug #4777).
	* xfce4-mixer/xfce-mixer-track.c: Don't show the mute button for 
	  capture tracks (follow up of bug #4777). 
	* xfce4-mixer/xfce-mixer.c: Use the "label" property everywhere. I 
	  missed a few appearances of the struct member in the previous commit.
	  Copy track labels for the hash table keys. The previous commit b0rked
	  this (follow up of bug #4521).

2009-02-01	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/libxfce4mixer.c,
	  libxfce4mixer/xfce-mixer-preferences.c,
	  libxfce4mixer/xfce-mixer-track-combo.c,
	  xfce4-mixer/xfce-mixer-controls-dialog.c,